# 3DViewerplus

./: README_RUS.md
src/: Doxyfile  Makefile
src/3dmainwindow/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  oglwidget.cc  oglwidget.h  ui_mainwindow.h
src/3dmainwindow/controller/: controller.cc  controller.h
src/3dmainwindow/gifimage/: qgifglobal.h  qgifimage.h
src/3dmainwindow/gifimage/tests/: test.c
src/3dmainwindow/model/: model.cc  model.h  settings.cc  settings.h
src/3dmainwindow/parser/: parser.cc  parser.h
src/3dmainwindow/simple_matrix/: s21_matrix_oop.cc  simple_matrix.cc  simple_matrix.h
src/html/: annotated.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui___main_window-members.html  class_ui___main_window.html  classes.html  classs21_1_1_main_window-members.html  classs21_1_1_main_window.html  classs21_1_1_o_g_l_widget-members.html  classs21_1_1_o_g_l_widget.html  classs21_1_1_observer-members.html  classs21_1_1_observer.html  classs21_1_1_timer__class-members.html  classs21_1_1_timer__class.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  mainwindow_8h_source.html  oglwidget_8h_source.html  ui__mainwindow_8h_source.html
src/html/search/: all_1.js  all_2.js  all_4.js  classes_1.js  classes_2.js  searchdata.js
src/tests/: test.cc
